improving ui and working with json client side